# mikrotik-mcp-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  install.sh  pyproject.toml  routers.json.example
docker/: docker-compose.yml
docs/: IMPLEMENTATION-PLAN.md
docs/adr/: 001-architecture-decisions.md  002-rag-api-discovery.md
gns3/: bootstrap_routers.py  create_topology.py  reset_rack.sh  setup_gns3_server.sh  start_rack.sh
src/mikrotik_mcp/: __init__.py  __main__.py  api_index.py  client.py  config.py  keyring_store.py  router_registry.py  server.py  types.py
src/mikrotik_mcp/tools/: api_tools.py  reading.py  writing.py
tests/: conftest.py  test_api_index.py  test_api_tools.py  test_client.py  test_config.py  test_integration.py  test_keyring_store.py  test_router_registry.py  test_tools_reading.py  test_types.py
