[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mikrotik-mcp-server"
version = "0.1.0"
description = "MCP server for managing MikroTik routers via RouterOS REST API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mikrotik_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running RouterOS instance",
]

[tool.mypy]
python_version = "3.11"
strict = true
